@@ -20,6 +20,7 @@
 - NEW: "up" button in the repo browser. (Stefan)
 - NEW: Checkbox to exclude the externals in the Check-For-Modifications
        dialog. (Stefan)
+- NEW: Ability to cancel the "patch all" function. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
